@@ -4,6 +4,7 @@ import github.com.ioridazo.fundanalyzer.domain.service.ViewService;
 import github.com.ioridazo.fundanalyzer.web.model.CodeInputData;
 import github.com.ioridazo.fundanalyzer.web.view.model.corporate.detail.AnalysisResultViewModel;
 import github.com.ioridazo.fundanalyzer.web.view.model.corporate.detail.CorporateDetailViewModel;
+import github.com.ioridazo.fundanalyzer.web.view.model.corporate.detail.IndicatorViewModel;
 import github.com.ioridazo.fundanalyzer.web.view.model.corporate.detail.MinkabuViewModel;
 import github.com.ioridazo.fundanalyzer.web.view.model.corporate.detail.StockPriceViewModel;
 import github.com.ioridazo.fundanalyzer.web.view.model.valuation.CompanyValuationViewModel;
@@ -18,7 +19,6 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Controller
 public class CorporatePresenter {
@@ -60,6 +60,7 @@ public class CorporatePresenter {
         model.addAttribute("forwardCode", view.getForwardCode());
         model.addAttribute("corporateView", view.getCorporate());
         setAnalysisView(view, model);
+        setInvestmentIndicator(view, model);
         model.addAttribute("financialStatements", view.getFinancialStatement());
         setForecastStock(view, model);
         setStockPriceView(view, model);
@@ -86,10 +87,52 @@ public class CorporatePresenter {
 
         model.addAttribute("analysisLabelAll", analysis.stream()
                 .map(AnalysisResultViewModel::getDocumentPeriod)
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("analysisPointAll", analysis.stream()
                 .map(AnalysisResultViewModel::getCorporateValue)
-                .collect(Collectors.toList()));
+                .toList());
+    }
+
+    private void setInvestmentIndicator(final CorporateDetailViewModel view, final Model model) {
+        model.addAttribute("indicators", view.getIndicatorList());
+
+        final List<IndicatorViewModel> indicator = view.getIndicatorList().stream()
+                .sorted(Comparator.comparing(IndicatorViewModel::targetDate))
+                .toList();
+
+        model.addAttribute("indicatorLabel30", indicator.stream()
+                .map(IndicatorViewModel::targetDate)
+                .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(30)))
+                .toList());
+        model.addAttribute("indicatorPoint30", indicator.stream()
+                .filter(vm -> vm.targetDate().isAfter(LocalDate.now().minusDays(30)))
+                .map(IndicatorViewModel::grahamIndex)
+                .toList());
+
+        model.addAttribute("indicatorLabel180", indicator.stream()
+                .map(IndicatorViewModel::targetDate)
+                .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(180)))
+                .toList());
+        model.addAttribute("indicatorPoint180", indicator.stream()
+                .filter(vm -> vm.targetDate().isAfter(LocalDate.now().minusDays(180)))
+                .map(IndicatorViewModel::grahamIndex)
+                .toList());
+
+        model.addAttribute("indicatorLabel365", indicator.stream()
+                .map(IndicatorViewModel::targetDate)
+                .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(365)))
+                .toList());
+        model.addAttribute("indicatorPoint365", indicator.stream()
+                .filter(vm -> vm.targetDate().isAfter(LocalDate.now().minusDays(365)))
+                .map(IndicatorViewModel::grahamIndex)
+                .toList());
+
+        model.addAttribute("indicatorLabelAll", indicator.stream()
+                .map(IndicatorViewModel::targetDate)
+                .toList());
+        model.addAttribute("indicatorPointAll", indicator.stream()
+                .map(IndicatorViewModel::grahamIndex)
+                .toList());
     }
 
     private void setForecastStock(final CorporateDetailViewModel view, final Model model) {
@@ -97,32 +140,32 @@ public class CorporatePresenter {
 
         final List<MinkabuViewModel> forecastStock = view.getMinkabuList().stream()
                 .sorted(Comparator.comparing(MinkabuViewModel::getTargetDate))
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("forecastStockLabel180", forecastStock.stream()
                 .map(MinkabuViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(180)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("forecastStockPoint180", forecastStock.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(180)))
                 .map(MinkabuViewModel::getGoalsStock)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("forecastStockLabel365", forecastStock.stream()
                 .map(MinkabuViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(365)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("forecastStockPoint365", forecastStock.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(365)))
                 .map(MinkabuViewModel::getGoalsStock)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("forecastStockLabelAll", forecastStock.stream()
                 .map(MinkabuViewModel::getTargetDate)
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("forecastStockPointAll", forecastStock.stream()
                 .map(MinkabuViewModel::getGoalsStock)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private void setStockPriceView(final CorporateDetailViewModel view, final Model model) {
@@ -130,83 +173,82 @@ public class CorporatePresenter {
 
         final List<StockPriceViewModel> stockPrice = view.getStockPriceList().stream()
                 .sorted(Comparator.comparing(StockPriceViewModel::getTargetDate))
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("stockLabel30", stockPrice.stream()
                 .map(StockPriceViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(30)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("stockPoint30", stockPrice.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(30)))
                 .map(StockPriceViewModel::getStockPrice)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("stockLabel90", stockPrice.stream()
                 .map(StockPriceViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(90)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("stockPoint90", stockPrice.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(90)))
                 .map(StockPriceViewModel::getStockPrice)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("stockLabel180", stockPrice.stream()
                 .map(StockPriceViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(180)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("stockPoint180", stockPrice.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(180)))
                 .map(StockPriceViewModel::getStockPrice)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("stockLabel365", stockPrice.stream()
                 .map(StockPriceViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(365)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("stockPoint365", stockPrice.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(365)))
                 .map(StockPriceViewModel::getStockPrice)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("stockLabelAll", stockPrice.stream()
                 .map(StockPriceViewModel::getTargetDate)
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("stockPointAll", stockPrice.stream()
                 .map(StockPriceViewModel::getStockPrice)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     private void setValuationView(final List<CompanyValuationViewModel> viewList, final Model model) {
         model.addAttribute("valuations", viewList);
 
-
         final List<CompanyValuationViewModel> valuation = viewList.stream()
                 .sorted(Comparator.comparing(CompanyValuationViewModel::getTargetDate))
-                .collect(Collectors.toList());
+                .toList();
 
         model.addAttribute("valuationLabel180", valuation.stream()
                 .map(CompanyValuationViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(180)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("valuationPoint180", valuation.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(180)))
                 .map(CompanyValuationViewModel::getDifferenceFromSubmitDate)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("valuationLabel365", valuation.stream()
                 .map(CompanyValuationViewModel::getTargetDate)
                 .filter(targetDate -> targetDate.isAfter(LocalDate.now().minusDays(365)))
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("valuationPoint365", valuation.stream()
                 .filter(vm -> vm.getTargetDate().isAfter(LocalDate.now().minusDays(365)))
                 .map(CompanyValuationViewModel::getDifferenceFromSubmitDate)
-                .collect(Collectors.toList()));
+                .toList());
 
         model.addAttribute("valuationLabelAll", valuation.stream()
                 .map(CompanyValuationViewModel::getTargetDate)
-                .collect(Collectors.toList()));
+                .toList());
         model.addAttribute("valuationPointAll", valuation.stream()
                 .map(CompanyValuationViewModel::getDifferenceFromSubmitDate)
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
